# mojo-playground.nix

./: .envrc  .gitattributes  .gitignore  .justfile  LICENSE  README.md  conftest.py  flake.nix  mojoproject.toml  pyproject.toml
examples/packages_with_a_single_tests_directory/: main.mojo
examples/packages_with_a_single_tests_directory/tests/my_package/: test_fibonacci.mojo
examples/packages_with_src_and_tests_directories/tests/my_package/: test_random_tensor.mojo
projects/packages_with_a_single_tests_directory/tests/my_package/: test_fire.🔥
