[project]
name = "mojo-playground"
version = "0.0.1"
description = "A playground for experimenting with the Mojo 🔥 programming language on macOS arm64"
authors = [
    { name = "Franck Rasolo", email = "franckrasolo@users.noreply.github.com" },
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
testing = [
    "pytest>=7.4.3",
    "pytest-mojo @ git+https://github.com/guidorice/mojo-pytest.git@v0.6.0",
]
